рефактор контроллера чата